--- a/public/css/default.css
+++ b/public/css/default.css
@@ -25,3 +25,11 @@ a{
 ul{
    list-style: none;
 }
+
+.btn-area{
+   width: 100%;
+   height: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
