--- a/views/partials/loginModal.handlebars
+++ b/views/partials/loginModal.handlebars
@@ -16,11 +16,12 @@
                <span>Gmail *</span>
             </div>
 
-
             <div class="form-group">
                <input type="text" name="password" required="required">
                <span>Password *</span>
             </div>
+
+            <input type="hidden" name="token" required="required" id="token">
 
             <div class="message-group">
                <div class="message" id="message">
@@ -48,9 +49,18 @@
    const openLoginModal = document.querySelectorAll('.openLoginModal')
    const closeLoginModal = document.querySelectorAll('.closeLoginModal')
    const message = document.getElementById('message')
+   const token = document.getElementById('token')
 
    openLoginModal.forEach((openButton) => {
       openButton.addEventListener('click', () => {
+         fetch('/token', {
+            method: 'post'
+         }).then((response) => response.json())
+            .then((data) => {
+               token.value = data.message
+            })
+            .catch((err) => { console.log(err) })
+
          loginModal.forEach((login) => {
             login.classList.add('active')
          })
